--- a/code/src/views/index.ejs
+++ b/code/src/views/index.ejs
@@ -131,6 +131,11 @@
       <p>Cadastre sua empresa para oferecer benefícios em troca de moedas estudantis</p>
       <a href="/empresas/cadastro" class="btn">Acessar</a>
     </div>
+    <div class="option-card">
+  <h2>Cadastro</h2>
+  <p>Selecione o tipo de cadastro que deseja realizar</p>
+  <a href="/cadastro" class="btn">Acessar</a>
+</div>
   </div>
 </body>
 </html>
