correção direcionamento do index

--- a/code/src/views/login.ejs
+++ b/code/src/views/login.ejs
@@ -179,7 +179,7 @@
         })
         .then(data => {
           // Redireciona para o dashboard após login bem-sucedido
-          window.location.href = '/dashboard';
+          window.location.href = '/';
         })
         .catch(error => {
           alert('E-mail ou senha incorretos. Por favor, tente novamente.');
