fix: redirecionamento para a página de login depois do cadastro do usuário ser realizado

--- a/code/src/views/cadastro.ejs
+++ b/code/src/views/cadastro.ejs
@@ -445,6 +445,7 @@
             } else {
               alert('Aluno cadastrado com sucesso!');
               form.reset();
+              window.location.href = '/login'
             }
           })
           .catch(error => {
@@ -472,6 +473,7 @@
             } else {
               alert('Professor cadastrado com sucesso!');
               form.reset();
+              window.location.href = '/login'
             }
           })
           .catch(error => {
@@ -500,6 +502,7 @@
             } else {
               alert('Empresa cadastrada com sucesso!');
               form.reset();
+              window.location.href = '/login'
             }
           })
           .catch(error => {
