--- a/code/src/views/login.ejs
+++ b/code/src/views/login.ejs
@@ -178,7 +178,7 @@
           return response.json();
         })
         .then(data => {
-          // Redireciona para o dashboard após login bem-sucedido
+          // Redireciona para a página inicial após login bem-sucedido
           window.location.href = '/';
         })
         .catch(error => {
